# anido

./: .gitmodules  README.md  meson.build  premake5.lua
.github/workflows/: c-cpp.yml
scripts/: build.sh  ecc.sh  rundebug.sh  runrelease.sh  version.sh
src/: anidopch.c  anidopch.h  main.c  meson.build  version.c  version.h
src/extractors/: extractors.c  extractors.h
src/extractors/alucard/: alucard.c  alucard.h
src/net/: connect.c  connect.h
src/opt/: opts.c  opts.h
src/parsing/: anime.c  anime.h  document.c  document.h
src/providers/: providers.c  providers.h
src/providers/tr/: turkanime.c  turkanime.h
src/util/: decryption.c  decryption.h  file.c  file.h  input_number.c  log.h  tmpdir.c  util.h  video.c  video.h
subprojects/libanim/include/libanim/: anim.h  html.h  libanimv.h  net.h  util.h
subprojects/libanim/src/: anim.c  libanimv.c  meson.build
subprojects/libanim/src/extractors/alucard/: alucard.c
subprojects/libanim/src/html/: html.c
subprojects/libanim/src/net/: net.c
subprojects/libanim/src/providers/: provider.c  provider.h
subprojects/libanim/src/providers/tr/turkanime/: turkanime.c
subprojects/libanim/src/util/: base64.c  decrypt.c  format_string.c  hex.c  murmur.c
